test/tests/stages/12_unsigned_integers/valid/extra_credit/postfix_precedence.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[43]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  int
  identifier(ui)
  =
  const unsigned int(4294967295U)
  ;
  if
  (
  (
  (
  unsigned
  long
  )
  identifier(ui)
  ++
  )
  !=
  const unsigned int(4294967295U)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  identifier(ui)
  )
  {
  return
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
