test/tests/stages/12_unsigned_integers/invalid_types/conflicting_uint_ulong.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  unsigned
  int
  identifier(foo)
  (
  void
  )
  ;
  unsigned
  long
  identifier(foo)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
